unpackaged/main/default/objects/Criteria__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Demographic</fullName>
            </value>
            <value>
                <fullName>Diagnosis</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Measure</fullName>
            </value>
            <value>
                <fullName>Medication</fullName>
            </value>
            <value>
                <fullName>Risk Factor</fullName>
            </value>
            <value>
                <fullName>Symptoms</fullName>
            </value>
            <value>
                <fullName>Treatment</fullName>
            </value>
            <value>
                <fullName>Willingness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>