unpackaged/main/default/objects/Criteria__c/fields/Criteria_Description__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Description__c</fullName>
    <label>Criteria Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>