unpackaged/main/default/objects/Criteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Criteria_Description__c</columns>
    <columns>NLM_Condition__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>